add animation to tmplate

--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -1128,7 +1128,8 @@
         </div>
     </div>
 
-
 </body>
+<script src="../assets/template/vendors/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../assets/template/vendors/bootstrap/js/src/dropdown.js"></script>
 <script src="../assets/template/vendors/jquery/dist/jquery.min.js"></script>
 <script src="../assets/template/build/js/custom.min.js"></script>
