--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,3 +6,7 @@
     position: relative;
     z-index: 2;
       }
+      .modal-backdrop {
+        /* bug fix - no overlay */    
+        display: none;    
+    }
