--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -57,16 +57,60 @@
                     </div>
 
                     <div>
-                        <a href="#" class="txt1">
+                        <a routerLink="/forgetPassword" class="txt1">
                             Mot de passe oublié?
                         </a>
                     </div>
                 </div>
 
                 <div class="container-login100-form-btn">
-                    <button class="login100-form-btn" (click)="onLogin()">
+                    <button class="login100-form-btn" (click)="onLogin()" data-toggle="modal"
+                        data-target="#exampleModal">
                         Connexion
                     </button>
+
+                    <!--erreur message -->
+                    <div *ngIf="mode==0 && requiredFieldErr==true">
+                        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" data-backdrop="false"
+                            aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Error</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        errrrrrrrrrrrrrrrrrror
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- info message   routerLink="/logout"-->
+                    <!--div class="modal fade" id="exampleModal" *ngIf="!errorMessage" tabindex="-1" role="dialog"
+                        data-backdrop="false" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Sucess</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    suceeeeeessssssssssssssssssssss
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Ok</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div-->
+
 
                 </div>
             </form>
