--- a/src/app/logout/logout.component.html
+++ b/src/app/logout/logout.component.html
@@ -1,26 +1,8 @@
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-    Launch demo modal
-</button>
+<ul class="navbar-nav">
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Error</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Username Or Password
-            </div>
-            <!--div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Ok</button>
-            </div-->
-        </div>
-    </div>
-</div>
+
+    <li><a *ngIf="loginService.isUserLoggedIn()" routerLink="/header" class="nav-link">Add New Employee</a></li>
+    <li><a *ngIf="loginService.isUserLoggedIn()" routerLink="/forgetPassword" class="nav-link">Login</a></li>
+    <li><a *ngIf="!loginService.isUserLoggedIn()" routerLink="/login" class="nav-link">LogOut</a></li>
+
+</ul>
