adjust refresh global coponent

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,9 @@
                 <li class="nav-item dropdown open" style="padding-left: 15px;">
                     <a href="javascript:;" class="user-profile dropdown-toggle" aria-haspopup="true" id="navbarDropdown"
                         data-toggle="dropdown" aria-expanded="false">
-                        <img src="../assets/template/images/img.jpg" alt="">John Doe
+                        <img src="../assets/template/images/img.jpg" alt="">
+                        {{user.nom}} {{user.prenom}}
+
                     </a>
                     <div class="dropdown-menu dropdown-usermenu pull-right" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="javascript:;"> Profile</a>
@@ -17,7 +19,7 @@
                             <span class="badge bg-red pull-right">50%</span>
                             <span>Settings</span>
                         </a>
-                        <a class="dropdown-item" href="javascript:;">Help</a>
+                        <a class="dropdown-item" href="javascript:;">Help </a>
                         <a class="dropdown-item" (click)="onLogout()"><i class="fa fa-sign-out pull-right"></i> Log
                             Out</a>
                     </div>
