--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -5,7 +5,7 @@
             <app-menu></app-menu>
             <app-header></app-header>
 
-            <!-- page content -->
+            <!-- page content  [id]="message"-->
             <div class="right_col" role="main">
                 <div class="">
                     <div class="page-title">
