--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-3 left_col">
-    <div class="left_col scroll-view">
+    <div class="left_col scroll-view" id="test">
         <div class="navbar nav_title" style="border: 0;">
             <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentelella Alela!</span></a>
         </div>
@@ -13,9 +13,11 @@
             <div class="profile_pic">
                 <img src="../assets/template/images/img.jpg" alt="..." class="img-circle profile_img">
             </div>
-            <div class="profile_info">
+            <div class="profile_info" id="info">
                 <span>Welcome,</span>
-                <h2>John Doe</h2>
+                <h2> {{user.prenom}}</h2>
+                <h2> {{user.nom}}</h2>
+
             </div>
         </div>
         <!-- /menu profile quick info -->
