--- a/src/app/Admin/users/users.component.html
+++ b/src/app/Admin/users/users.component.html
@@ -69,7 +69,8 @@
                                         <tbody>
 
                                             <ng-container *ngFor="let c of pageUser?.content">
-                                                <tr *ngIf="!c.etat" class="previousUser">
+                                                <tr *ngIf="!c.etat">
+                                                    <!--class="previousUser"-->
                                                     <td>{{c.nom}}</td>
                                                     <td>{{c.prenom}}</td>
                                                     <td>{{c.date_naissance}}</td>
@@ -80,11 +81,15 @@
                                                                 class="fa fa-folder"></i> </a>
                                                         <a href="#" class="btn btn-info btn-xs" title="edit"><i
                                                                 class="fa fa-pencil"></i> </a>
-                                                        <a class="btn btn-warning btn-xs" title="enable"
-                                                            (click)="enableUser(c.id)">
-                                                            <i class="fa fa-share"></i> </a>
+
+                                                        <button type="button" class="btn btn-warning btn-xs"
+                                                            title="enable" (click)="enableConfirme(c)">
+                                                            <i class="fa fa-share"></i>
+                                                        </button>
+
 
                                                     </td>
+
 
                                                 </tr>
                                                 <tr *ngIf="c.etat">
@@ -98,12 +103,15 @@
                                                                 class="fa fa-folder"></i> </a>
                                                         <a href="#" class="btn btn-info btn-xs" title="edit"><i
                                                                 class="fa fa-pencil"></i> </a>
-                                                        <a class="btn btn-danger btn-xs" (click)="stopUser(c.id)"
-                                                            title="delete">
+                                                        <a class="btn btn-danger btn-xs" title="delete"
+                                                            (click)="deleteConfirme(c)">
                                                             <i class="fa fa-trash-o"></i>
 
                                                         </a>
+
+
                                                     </td>
+
                                                 </tr>
                                             </ng-container>
 
@@ -122,6 +130,11 @@
                                 </div>
                             </div>
                             <div id="box">
+
+
+
+
+
 
                             </div>
                         </div>
