--- a/src/app/forget-password/forget-password.component.html
+++ b/src/app/forget-password/forget-password.component.html
@@ -9,7 +9,7 @@
                         <input type="text" class="form-control" placeholder="Username" name="username"
                             [(ngModel)]="username" required="" />
                     </div>
-                    <div *ngIf="mode==1">
+                    <!--div *ngIf="mode==1">
                         <div class="alert alert-danger alert-dismissible fade show" *ngIf="errMsg">
                             <strong>Error!</strong> A problem has been occurred while submitting your username.
 
@@ -18,12 +18,12 @@
                         <div class="alert alert-primary" role="alert" *ngIf="!errMsg">
                             <strong>Check your email</strong> To receive the password forgotting!
                         </div>
-                    </div>
+                    </div-->
                     <div>
                         <button type="button" class="btn btn-primary" (click)="onForgetPassword()" data-toggle="modal"
                             data-target="#exampleModal">Primary</button>
                     </div>
-                    <div *ngIf="emailCheckBox==true   &&  mode==0">
+                    <!--div *ngIf="emailCheckBox==true   &&  mode==0">
                         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" data-backdrop="false"
                             aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog" role="document">
@@ -41,7 +41,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div-->
                     <div>
                         <a class="btn btn-default submit" routerLink="/login">Log in</a>
 
