--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -70,7 +70,7 @@
                     </button>
 
                     <!--erreur message -->
-                    <div *ngIf="mode==0 && requiredFieldErr==true">
+                    <!--div *ngIf="mode==0 && requiredFieldErr==true">
                         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" data-backdrop="false"
                             aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog" role="document">
@@ -88,28 +88,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- info message   routerLink="/logout"-->
-                    <!--div class="modal fade" id="exampleModal" *ngIf="!errorMessage" tabindex="-1" role="dialog"
-                        data-backdrop="false" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Sucess</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    suceeeeeessssssssssssssssssssss
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Ok</button>
-                                </div>
-                            </div>
-                        </div>
                     </div-->
+
 
 
                 </div>
