add formulaire add user

--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -5,7 +5,23 @@
             <app-menu></app-menu>
             <app-header></app-header>
 
-            <app-users></app-users>
+            <!-- page content -->
+            <div class="right_col" role="main">
+                <div class="">
+                    <div class="page-title">
+                        <div class="title_left">
+                            <h3>Users: </h3>
+                        </div>
+                    </div>
+
+                    <div class="clearfix"></div>
+
+                    <div id="box">
+
+                    </div>
+                </div>
+            </div>
+            <!-- /page content -->
             <app-footer></app-footer>
         </div>
     </div>
