--- a/src/app/Admin/add-user/add-user.component.html
+++ b/src/app/Admin/add-user/add-user.component.html
@@ -1,159 +1,183 @@
-<!-- page content -->
-<div class="right_col" role="main">
-    <div class="">
-        <div class="page-title">
-            <div class="title_left">
-                <h3>Ajouter un membre</h3>
-            </div>
+<body class="nav-md">
+    <div class="container body">
+        <div class="main_container">
 
-            <div class="title_right">
-                <div class="col-md-5 col-sm-5  form-group pull-right top_search">
-                    <div class="input-group">
-                        <div class="col-sm-12 col-12 text-right m-b-20">
-                            <a href="addPrescription.html" class="btn btn-primary float-right btn-rounded"><i
-                                    class="fa fa-plus"></i> Add Prescription</a>
+            <app-menu></app-menu>
+            <app-header></app-header>
+
+
+            <!-- page content -->
+            <div class="right_col" role="main">
+                <div class="">
+                    <div class="page-title">
+                        <div class="title_left">
+                            <h3>Ajouter un membre</h3>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="clearfix"></div>
-        <div class="row">
-            <div class="col-md-1 col-sm-1 ">
-            </div>
-            <div class="col-md-10 col-sm-10 ">
-                <div class="x_panel">
-                    <div class="x_title">
-                        <h2>Form Design <small>different form elements</small></h2>
-                        <ul class="nav navbar-right panel_toolbox">
-                            <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                    aria-haspopup="true" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a class="dropdown-item" href="#">Settings 1</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Settings 2</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li><a class="close-link"><i class="fa fa-close"></i></a>
-                            </li>
-                        </ul>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="x_content">
-                        <br />
-                        <form id="demo-form2" data-parsley-validate class="form-horizontal form-label-left" novalidate>
 
-                            <div class="item form-group">
-                                <label class="col-form-label col-md-3 col-sm-3 label-align" for="first-name">First Name
-                                    <span class="required">*</span>
-                                </label>
-
-
-                                <div class="input-group col-md-6 col-sm-6 ">
-                                    <span class="input-group-addon"><i class="fa  fa-user"></i></span>
-                                    <input type="text" class="form-control" placeholder="nom">
-
-                                </div>
-                            </div>
-                            <div class="field item form-group">
-                                <label class="col-form-label col-md-3 col-sm-3 label-align" for="first-name">Tel <span
-                                        class="required">*</span>
-                                </label>
-
-
-                                <div class="input-group col-md-6 col-sm-6 ">
-                                    <span class="input-group-addon required"><i class="fa  fa-phone"></i></span>
-                                    <input type="text" class="form-control" placeholder="tel" required="required">
-                                </div>
-                            </div>
-                            <div class="item form-group">
-                                <label class="col-form-label col-md-3 col-sm-3 label-align" for="last-name">E-mail <span
-                                        class="required">*</span>
-                                </label>
-                                <div class="input-group col-md-6 col-sm-6">
-                                    <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-                                    <input type="email" class="form-control" placeholder="Email">
-                                </div>
-                            </div>
-                            <div class="item form-group">
-                                <label class="col-form-label col-md-3 col-sm-3 label-align" for="exampleInputFile">File
-                                    input</label>
-                                <div class="col-md-6 col-sm-6">
-                                    <input type="file" id="exampleInputFile">
-
-                                </div>
-                            </div>
-                            <div class="item form-group">
-                                <label class="col-form-label col-md-3 col-sm-3 label-align" for="last-name">Password
-                                    <span class="required">*</span>
-                                </label>
-                                <div class="input-group col-md-6 col-sm-6">
-                                    <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                                    <input type="password" class="form-control" id="exampleInputPassword1"
-                                        placeholder="Password">
-                                </div>
-                            </div>
-                            <div class="item form-group">
-                                <label for="middle-name" class="col-form-label col-md-3 col-sm-3 label-align">Middle
-                                    Name / Initial</label>
-                                <div class="col-md-6 col-sm-6 ">
-                                    <input id="middle-name" class="form-control" type="text" name="middle-name">
-                                </div>
-                            </div>
-                            <div class="item form-group">
-                                <label class="col-form-label col-md-3 col-sm-3 label-align">Gender</label>
-                                <div class="col-md-6 col-sm-6 ">
-                                    <div id="gender" class="btn-group" data-toggle="buttons">
-                                        <label class="btn btn-secondary" data-toggle-class="btn-primary"
-                                            data-toggle-passive-class="btn-default">
-                                            <input type="radio" name="gender" value="male" class="join-btn"> &nbsp; Male
-                                            &nbsp;
-                                        </label>
-                                        <label class="btn btn-primary" data-toggle-class="btn-primary"
-                                            data-toggle-passive-class="btn-default">
-                                            <input type="radio" name="gender" value="female" class="join-btn"> Female
-                                        </label>
+                        <div class="title_right">
+                            <div class="col-md-5 col-sm-5  form-group pull-right top_search">
+                                <div class="input-group">
+                                    <div class="col-sm-12 col-12 text-right m-b-20">
+                                        <a href="addPrescription.html"
+                                            class="btn btn-primary float-right btn-rounded"><i class="fa fa-plus"></i>
+                                            Add Prescription</a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="item form-group">
-                                <label class="col-form-label col-md-3 col-sm-3 label-align">Date Of Birth <span
-                                        class="required">*</span>
-                                </label>
-                                <div class="col-md-6 col-sm-6 ">
-                                    <input id="birthday" class="date-picker form-control" required="required"
-                                        type="text">
-                                </div>
-                            </div>
-
-                            <div class="ln_solid"></div>
-                            <div class="item form-group">
-                                <div class="col-md-6 col-sm-6 offset-md-3">
-                                    <button class="btn btn-primary" type="button">Cancel</button>
-                                    <button class="btn btn-primary" type="reset">Reset</button>
-                                    <button type="submit" class="btn btn-success">Submit</button>
-                                </div>
-                            </div>
-
-                        </form>
+                        </div>
                     </div>
+                    <div class="clearfix"></div>
+                    <div class="row">
+                        <div class="col-md-1 col-sm-1 ">
+                        </div>
+                        <div class="col-md-10 col-sm-10 ">
+                            <div class="x_panel">
+                                <div class="x_title">
+                                    <h2>Form Design <small>different form elements</small></h2>
+                                    <ul class="nav navbar-right panel_toolbox">
+                                        <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                                        </li>
+                                        <li class="dropdown">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                                aria-haspopup="true" aria-expanded="false"><i
+                                                    class="fa fa-wrench"></i></a>
+                                            <ul class="dropdown-menu" role="menu">
+                                                <li><a class="dropdown-item" href="#">Settings 1</a>
+                                                </li>
+                                                <li><a class="dropdown-item" href="#">Settings 2</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li><a class="close-link"><i class="fa fa-close"></i></a>
+                                        </li>
+                                    </ul>
+                                    <div class="clearfix"></div>
+                                </div>
+                                <div class="x_content">
+                                    <br />
+                                    <form id="demo-form2" data-parsley-validate class="form-horizontal form-label-left"
+                                        novalidate>
+
+
+                                        <div class="form-row">
+                                            <div class="form-group col-md-6">
+                                                <label for="inputNom4">Nom</label>
+                                                <input type="text" class="form-control" id="inputNom" placeholder="Nom">
+                                            </div>
+                                            <div class="form-group col-md-6">
+                                                <label for="inputPrenom4">Prénom</label>
+                                                <input type="password" class="form-control" id="inputPassword4"
+                                                    placeholder="Password">
+                                            </div>
+                                        </div>
+                                        <br>
+                                        <div class="form-group">
+                                            <label>Date naissance</label>
+                                            <input type="date" name="bday" max="3000-12-31" min="1000-01-01"
+                                                class="form-control">
+                                        </div>
+                                        <br>
+
+
+                                        <div class="form-group ">
+
+                                            <label>Sexe</label><br>
+                                            <div class="col-md-6">
+                                                <div class="custom-control custom-radio  ">
+                                                    <input type="radio" class="custom-control-input" id="customRadio"
+                                                        name="example" value="customEx">
+                                                    <label class="custom-control-label" for="customRadio">Male</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="custom-control custom-radio ">
+                                                    <input type="radio" class="custom-control-input" id="customRadio2"
+                                                        name="example" value="customEx" checked>
+                                                    <label class="custom-control-label" for="customRadio2">Female
+                                                    </label>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                        <br> <br>
+
+                                        <div class="form-group">
+                                            <label for="inputAddress">Address</label>
+                                            <input type="text" class="form-control" id="inputAddress"
+                                                placeholder="1234 Main St">
+                                        </div>
+                                        <br>
+                                        <div class="form-group">
+                                            <label for="inputAddress2">Telephone</label>
+                                            <input type="tel" class="form-control" id="example-tel-input"
+                                                value="1-(555)-555-5555">
+
+                                        </div>
+                                        <br>
+                                        <div class="form-row">
+                                            <div class="form-group col-md-6">
+
+                                                <label for="inputAddress2">Email</label>
+                                                <input type="email" class="form-control" id="inputEmail4"
+                                                    placeholder="Email">
+
+                                            </div>
+                                            <div class="form-group col-md-6">
+                                                <label for="inputState">Rôle</label>
+                                                <select id="inputState" class="form-control">
+                                                    <option selected>Choose...</option>
+                                                    <option>ADMIN</option>
+                                                    <option>MEDECIN</option>
+                                                    <option>SECRETAIRE</option>
+                                                    <option>INFIRMIER</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <br>
+                                        <div class="form-group">
+                                            <label for="exampleInputFile">Photo</label>
+                                            <input type="file" class="form-control-file" id="exampleInputFile"
+                                                aria-describedby="fileHelp">
+                                            <!--small id="fileHelp" class="form-text text-muted">This is some placeholder
+                                                block-level help text for the above input. It's a bit lighter and easily
+                                                wraps to a new line.</small-->
+                                        </div>
+                                        <br>
+
+
+
+
+                                        <div class="ln_solid"></div>
+                                        <div class="item form-group">
+                                            <div class="col-md-6 col-sm-6 offset-md-3">
+                                                <button class="btn btn-default" type="button">Annulé</button>
+                                                <button class="btn btn-primary" type="reset">Validé</button>
+                                            </div>
+                                        </div>
+                                    </form>
+
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-1 col-sm-1 ">
+                        </div>
+                    </div>
+
+
+
+
+
+
+
+
                 </div>
             </div>
-            <div class="col-md-1 col-sm-1 ">
-            </div>
+            <!-- /page content -->
+
+            <app-footer></app-footer>
         </div>
-
-
-
-
-
-
-
-
     </div>
-</div>
-<!-- /page content -->
+
+</body>
