--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+#box
+{
+    height:850px ;
+    width: 850px;
+    background-color:white;
+} 
