--- a/src/app/Admin/add-user/add-user.component.html
+++ b/src/app/Admin/add-user/add-user.component.html
@@ -76,7 +76,8 @@
                                         <div class="form-group">
                                             <label>Date naissance</label>
                                             <input type="date" name="bday" max="3000-12-31" min="1000-01-01"
-                                                id="dateNaissance" class="form-control" formControlName="dateNaissance">
+                                                id="dateNaissance" class="form-control" formControlName="dateNaissance"
+                                                required>
                                         </div>
                                         <br>
 
@@ -87,14 +88,14 @@
                                             <div class="col-md-6">
                                                 <div class="custom-control custom-radio  ">
                                                     <input type="radio" class="custom-control-input" id="customRadio"
-                                                        formControlName="sexe" name="example" value="male" checked>
+                                                        formControlName="sexe" name="sexe" value="male" checked>
                                                     <label class="custom-control-label" for="customRadio">Male</label>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="custom-control custom-radio ">
                                                     <input type="radio" class="custom-control-input" id="customRadio2"
-                                                        formControlName="sexe" name="example" value="female">
+                                                        formControlName="sexe" name="sexe" value="female">
                                                     <label class="custom-control-label" for="customRadio2">Female
                                                     </label>
                                                 </div>
@@ -107,7 +108,7 @@
                                         <div class="form-group">
                                             <label for="inputAddress">Address</label>
                                             <input type="text" id="adress" class="form-control" formControlName="adress"
-                                                placeholder="1234 Main St">
+                                                placeholder="1234 Main St" required>
                                         </div>
                                         <br>
                                         <div class="form-group">
@@ -128,7 +129,7 @@
                                             <div class="form-group col-md-6">
                                                 <label for="inputState">Rôle</label>
                                                 <select id="role" class="form-control" formControlName="role"
-                                                    placeholder="Role">
+                                                    placeholder="Role" required>
 
                                                     <option>ADMIN</option>
                                                     <option>MEDECIN</option>
@@ -138,15 +139,23 @@
                                             </div>
                                         </div>
                                         <br>
-                                        <!--div class="form-group">
-                                            <label for="exampleInputFile">Photo</label>
-                                            <input type="file" id="photo" class="form-control" formControlName="photo"
-                                                aria-describedby="fileHelp">
-                                            <small id="fileHelp" class="form-text text-muted">This is some placeholder
-                                                block-level help text for the above input. It's a bit lighter and easily
-                                                wraps to a new line.</small>
+
+                                        <!--div style="display: flex; margin: 10px">
+                                            <label> List of user</label>
+    
+                                            <ng-select [items]="services" bindLabel="nom" placeholder="Select item"
+                                                appendTo="body" multiple="true" [(ngModel)]="selected">
+                                            </ng-select>
                                         </div-->
-                                        <br>
+                                        <div class="form-group">
+                                            <label> Liste des services</label><br>
+
+                                            <ng-select [items]="services" bindLabel="nom" placeholder="Select item"
+                                                appendTo="body" multiple="true" formControlName="selected" required>
+                                            </ng-select>
+                                        </div>
+
+                                        <br><br><br>
 
 
 
@@ -160,6 +169,7 @@
                                             </div>
                                         </div>
                                     </form>
+
 
 
                                 </div>
