--- a/src/app/Admin/users/users.component.html
+++ b/src/app/Admin/users/users.component.html
@@ -89,7 +89,7 @@
                                                                     <a class="btn btn-primary btn-xs"
                                                                         (click)="detailUser(c.id)" title="view"><i
                                                                             class="fa fa-folder"></i> </a>
-                                                                    <!--a href="#" class="btn btn-info btn-xs"
+                                                                    <!--a href="#" class="btn btn-info btn-xs" (click)="editUser(c.id)"
                                                                         title="edit"><i class="fa fa-pencil"></i> </a-->
 
                                                                     <button type="button" class="btn btn-warning btn-xs"
@@ -112,7 +112,8 @@
                                                                     <a class="btn btn-primary btn-xs"
                                                                         (click)="detailUser(c.id)" title="view"><i
                                                                             class="fa fa-folder"></i> </a>
-                                                                    <a class="btn btn-info btn-xs" title="edit"><i
+                                                                    <a class="btn btn-info btn-xs"
+                                                                        (click)="editUser(c.id)" title="edit"><i
                                                                             class="fa fa-pencil"></i> </a>
                                                                     <a class="btn btn-danger btn-xs" title="delete"
                                                                         (click)="deleteConfirme(c)">
