resolve some problem of navigation

--- a/src/app/Admin/edit-user/edit-user.component.html
+++ b/src/app/Admin/edit-user/edit-user.component.html
@@ -58,8 +58,8 @@
                                         </div>
                                         <br>
 
-                                        &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<button
-                                            class="btn btn-success">Detaille</button>
+                                        &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<button class="btn btn-success"
+                                            (click)="detailUser(user?.id)">Detaille</button>
 
 
                                     </div>
