--- a/src/app/Admin/detail-user/detail-user.component.html
+++ b/src/app/Admin/detail-user/detail-user.component.html
@@ -88,11 +88,6 @@
                                                 {{user?.sexe}}
                                             </li>
                                         </ul>
-
-                                        <!--a class="btn btn-success"><i class="fa fa-edit m-right-xs"></i>Edit Profile</a>
-                                        <br /-->
-
-
                                     </div>
                                     <div class="col-md-9 col-sm-9 ">
                                         <div class="" role="tabpanel" data-example-id="togglable-tabs">
@@ -103,13 +98,14 @@
                                                 </li>
 
                                                 <li role="presentation" class=""><a href="#tab_content3" role="tab"
-                                                        id="profile-tab2" data-toggle="tab"
-                                                        aria-expanded="false">Historique</a>
+                                                        id="profile-tab2" data-toggle="tab" aria-expanded="false">
+                                                        Historique</a>
                                                 </li>
                                             </ul>
                                             <div id="myTabContent" class="tab-content">
                                                 <div role="tabpanel" class="tab-pane active " id="tab_content1"
                                                     aria-labelledby="home-tab">
+                                                    <hr>
 
                                                     <!-- start recent activity -->
                                                     <ul class="messages">
@@ -139,49 +135,7 @@
 
                                                             </div>
                                                         </li>
-                                                        <!--li>
-                                                            <img src="../assets/template/images/tel.png" class="avatar"
-                                                                alt="Avatar">
-                                                            <div class="message_date">
-                                                                <h3 class="date text-error">21</h3>
-                                                                <p class="month">May</p>
-                                                            </div>
-                                                            <div class="message_wrapper">
-                                                                <h4 class="heading">Téléphone</h4>
-                                                                <blockquote class="message">Raw denim you probably
-                                                                    haven't heard of them jean shorts Austin. Nesciunt
-                                                                    tofu stumptown aliqua butcher retro keffiyeh
-                                                                    dreamcatcher synth.</blockquote>
-                                                                <br />
-                                                                <p class="url">
-                                                                    <span class="fs1" aria-hidden="true"
-                                                                        data-icon=""></span>
-                                                                    <a href="#" data-original-title="">Download</a>
-                                                                </p>
-                                                            </div>
-                                                        </li>
-                                                        <li>
-                                                            <img src="../assets/template/images/email.png"
-                                                                class="avatar" alt="Avatar">
-                                                            <div class="message_date">
-                                                                <h3 class="date text-info">24</h3>
-                                                                <p class="month">May</p>
-                                                            </div>
-                                                            <div class="message_wrapper">
-                                                                <h4 class="heading">E-mail</h4>
-                                                                <blockquote class="message">Raw denim you probably
-                                                                    haven't heard of them jean shorts Austin. Nesciunt
-                                                                    tofu stumptown aliqua butcher retro keffiyeh
-                                                                    dreamcatcher synth.</blockquote>
-                                                                <br />
-                                                                <p class="url">
-                                                                    <span class="fs1 text-info" aria-hidden="true"
-                                                                        data-icon=""></span>
-                                                                    <a href="#"><i class="fa fa-paperclip"></i> User
-                                                                        Acceptance Test.doc </a>
-                                                                </p>
-                                                            </div>
-                                                        </li-->
+
                                                         <li>
                                                             <img src="../assets/template/images/adress.png"
                                                                 class="avatar" alt="Avatar">
@@ -200,7 +154,8 @@
 
                                                             <div class="message_wrapper">
                                                                 <h4 class="heading">Profession</h4>
-                                                                <blockquote class="message">{{user?.role}}.</blockquote>
+                                                                <blockquote class="message">{{user?.role}}.
+                                                                </blockquote>
                                                                 <br />
 
                                                             </div>
@@ -213,11 +168,13 @@
                                                                 <h4 class="heading">Travaille au service</h4>
                                                                 <blockquote class="message"
                                                                     *ngIf="servicesOccupied?.totalElements>0; else showExcuse">
-                                                                    <p *ngIf="user?.sexe=='male'">Les service de soin
+                                                                    <p *ngIf="user?.sexe=='male'">Les service de
+                                                                        soin
                                                                         dont Mr: &nbsp;{{user?.nom}} &nbsp;
                                                                         {{user?.prenom}} est attaché:
                                                                     </p>
-                                                                    <p *ngIf="user?.sexe=='female'"> Les service de soin
+                                                                    <p *ngIf="user?.sexe=='female'"> Les service de
+                                                                        soin
                                                                         dont Mme: &nbsp;{{user?.nom}} &nbsp;
                                                                         {{user?.prenom}} est attachée:
                                                                     </p>
@@ -238,25 +195,26 @@
                                                                         <ul class="pagination justify-content-end">
 
                                                                             <li class="page-item"
-                                                                                *ngFor="let p of pages; let i=index"
-                                                                                [ngClass]="{'active':i==curentPage}">
+                                                                                *ngFor="let p of pages; let r=index">
                                                                                 <a class="page-link clickable"
-                                                                                    (click)="gotoPage(i)">{{i}}</a>
+                                                                                    (click)="gotoPage(r)">{{r}}</a>
                                                                             </li>
                                                                         </ul>
                                                                     </nav>
                                                                 </blockquote>
                                                                 <ng-template #showExcuse>
                                                                     <blockquote class="message">
-                                                                        <!-- *ngIf="servicesOccupied.totalElements==0"-->
+
                                                                         <p *ngIf="user?.sexe=='male'"> Mr:
                                                                             &nbsp;{{user?.nom}} &nbsp;
-                                                                            {{user?.prenom}} n'est pas encore attaché à
+                                                                            {{user?.prenom}} n'est pas encore
+                                                                            attaché à
                                                                             aucun service
                                                                         </p>
                                                                         <p *ngIf="user?.sexe=='female'"> Mme:
                                                                             &nbsp;{{user?.nom}} &nbsp;
-                                                                            {{user?.prenom}} n'est pas encore attachée à
+                                                                            {{user?.prenom}} n'est pas encore
+                                                                            attachée à
                                                                             aucun service
                                                                         </p>
 
@@ -272,11 +230,13 @@
 
                                                     <!-- end recent activity -->
 
+
                                                 </div>
 
                                                 <div role="tabpanel" class="tab-pane fade" id="tab_content3"
                                                     aria-labelledby="profile-tab">
                                                     <br>
+
 
                                                     <div
                                                         *ngIf="historiqueServicesOccupied?.totalElements>0; else showHistorique">
@@ -319,12 +279,14 @@
                                                                 &nbsp;
                                                                 {{user?.prenom}} n'a pas encore un
                                                                 historique.</p>
-                                                            <p *ngIf="user?.sexe=='female'"> Mme: &nbsp;{{user?.nom}}
+                                                            <p *ngIf="user?.sexe=='female'"> Mme:
+                                                                &nbsp;{{user?.nom}}
                                                                 &nbsp;
                                                                 {{user?.prenom}} n'a pas encore un
                                                                 historique.</p>
                                                         </blockquote>
                                                     </ng-template>
+
                                                 </div>
                                             </div>
                                         </div>
